Second draft styling - Need to fix alignment

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 .searchpage {
     margin: auto;
-    width: 50%;
+    width: 50VW;
     text-align: center;
+    
 }
 
 .searchpage img{
@@ -11,20 +12,25 @@
 
 .searchpage input{
     width: 400px;
+    height: 35px;
     margin: 20px 0;
-    border-radius: 10px;
-    border-color: #c4c4c4;
+    border: 1px solid #c4c4c4;
+    border-radius: 20px;
     color: #5b5b5b
 }
 
 button {
-    font-size: 2 rem;
-    padding: 10px 20px;
+    padding: 10px 18px;
+    font-size: 15px; 
+    border: 0.2px solid #1a5fd0;
     border-radius: 5px;
-    border-color: #1a5fd0;
     background-color: #4285f3;
-    color: white
-    
+    color: white ;
+    display: block;
+}
+
+.searchpage button{
+    margin: auto;
 }
 
 button:hover {
